# clean-rust-api

./: Cargo.toml  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/app/: mod.rs
src/app/routes/: signup.rs
src/data/: mod.rs  protocols.rs  usecases.rs
src/data/protocols/: add_account_repository.rs  encrypter.rs
src/data/usecases/: add_account.rs
src/data/usecases/add_account/db_add_account/: mod.rs  tests.rs
src/domain/: entities.rs  usecases.rs
src/domain/entities/: account.rs
src/domain/usecases/: add_account.rs
src/infra/: crypto.rs  db.rs
src/infra/crypto/sha2_adapter/: mod.rs  tests.rs
src/infra/db/: mongo_helper.rs
src/infra/db/account_mongo_repository/: mod.rs  tests.rs
src/infra/db/protocols/: account_repository.rs
src/presentation/: controllers.rs  http.rs  mod.rs  protocols.rs
src/presentation/controllers/signup/: mod.rs  tests.rs
src/presentation/protocols/: controller.rs  email_validator.rs
src/utils/: mod.rs
src/utils/email_validator_adapter/: mod.rs  tests.rs
tests/: account_mongo_repository.rs
