[package]
name = "clean-rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full", "macros"] }
async-trait = "0.1.52"
validator = { version = "0.14.0", features = ["derive"] }
mockall = "0.11.0"
sha2 = "0.10.2"
base64ct = { version = "1.4.1", features = ["alloc"] }
mongodb = "2.1.0"

[dev-dependencies]
mockall_double = "0.2.1"
